# kelly-lab

./: ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: ACHIEVEMENTS.md  EXAMPLES_20260709.md  PAIR_NOTE.md  TIMESTAMP.md  USAGE.md
src/kelly_lab/: __init__.py  __main__.py  cli.py  kelly.py
tests/: test_break_even.py  test_clamp_edge.py  test_edge.py  test_eighth_kelly.py  test_geometric_growth.py  test_half_kelly.py  test_kelly.py  test_kelly_extra.py  test_quarter_kelly.py  test_ruin_probability.py  test_version.py
